@@ -1,3 +1,7 @@
+2009-03- Matěj Týč <bubla@users.sf.net>
+	* configure.ac: Corrected example compilation report
+	* m4/devil-definitions.m4: Added correct LCMS absence correct handling
+
 2009-03-16 Denton Woods <doomwiz@users.sf.net>
 	* ilu_error-italian.h: Added Italian translation of error messages.
 	* ilu_error.c: Added Italian support.
